[package]
name        = "threader"
version     = "0.0.0"
authors     = ["Liam <liam@scalzulli.com>"]
edition     = "2018"
description = "Craft Twitter threads using Markdown files"
license     = "CC0-1.0"
homepage    = "https://github.com/terror/threader"
repository  = "https://github.com/terror/threader"
categories  = ["command-line-utilities"]
keywords    = ["command-line", "twitter", "twitter-threads", "utility"]
resolver    = "2"

[[bin]]
name = "threader"
path = "src/main.rs"

[dependencies]
dotenv         = "0.15.0"
egg-mode       = "0.16.0"
pulldown-cmark = "0.8.0"
snafu          = "0.6.10"
structopt      = "0.3.22"

[dependencies.tokio]
version  = "1.10.0"
features = ["full"]

[dev-dependencies]
rstest   = "0.11.0"
tempfile = "3.2.0"
textwrap = "0.14.2"
